--- a/vm/types/Cargo.toml
+++ b/vm/types/Cargo.toml
@@ -20,6 +20,10 @@ chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
 mirai-annotations = "1.10.1"
 log = "0.4.16"
 bech32 = "0.9"
+num-derive = "0.3.3"
+num-traits = "0.2"
+thiserror = "1.0"
+bcs = "0.1.3"
 
 proptest = { version = "1.0.0", default-features = false, optional = true }
 proptest-derive = { version = "0.3.0", default-features = false, optional = true }
