--- a/vm/vm-runtime/Cargo.toml
+++ b/vm/vm-runtime/Cargo.toml
@@ -13,12 +13,13 @@ once_cell = "1.12.0"
 starcoin-types = { path = "../../types"}
 move-core-types = { git = "https://github.com/starcoinorg/move", rev = "f227e6b5c4214e5074c0fcb1ff551513a956b5d8" }
 move-vm-runtime = { git = "https://github.com/starcoinorg/move", rev = "f227e6b5c4214e5074c0fcb1ff551513a956b5d8" }
+move-table-extension = { git = "https://github.com/starcoinorg/move", rev = "f227e6b5c4214e5074c0fcb1ff551513a956b5d8" }
 move-stdlib = { git = "https://github.com/starcoinorg/move", rev = "f227e6b5c4214e5074c0fcb1ff551513a956b5d8" }
 tracing = "0.1.34"
 starcoin-config = { path = "../../config"}
 starcoin-logger = {path = "../../commons/logger"}
 num_enum = "0.5.7"
-crypto = { package = "starcoin-crypto", git = "https://github.com/starcoinorg/starcoin-crypto", rev = "d871dfb4216f034ee334a575926c101574d9d6dc"}
+starcoin-crypto = { package = "starcoin-crypto", git = "https://github.com/starcoinorg/starcoin-crypto", rev = "d871dfb4216f034ee334a575926c101574d9d6dc"}
 rand = "0.8.5"
 rand_core = { version = "0.6.3", default-features = false }
 bcs-ext = { package="bcs-ext", path = "../../commons/bcs_ext" }
@@ -27,6 +28,10 @@ starcoin-vm-types = { path = "../types"}
 starcoin-move-compiler = { path = "../compiler"}
 starcoin-natives = {path = "../natives"}
 starcoin-metrics = {path = "../../commons/metrics"}
+serde = { version = "1.0.130", default-features = false }
+serde_json = { version = "1.0", features = ["arbitrary_precision"] }
+serde_bytes = "0.11.5"
+serde-helpers = {path = "../../commons/serde-helpers"}
 
 [dev-dependencies]
 
