1.add statedb table extension, sessionext can not compiler 2.reference

--- a/state/service/Cargo.toml
+++ b/state/service/Cargo.toml
@@ -21,6 +21,7 @@ starcoin-storage = { path = "../../storage" }
 starcoin-state-tree = { path = "../state-tree"}
 starcoin-service-registry = { path = "../../commons/service-registry" }
 tokio = "1"
+starcoin-vm-types = {path = "../../vm/types"}
 
 [dev-dependencies]
 test-helper = { path = "../../test-helper" }
