remove WriteAccessPathSet and refactor code

--- a/dataformat-generator/Cargo.toml
+++ b/dataformat-generator/Cargo.toml
@@ -19,3 +19,4 @@ anyhow = "1.0"
 serde = "1.0.130"
 serde_yaml = "0.8"
 bcs-ext = { package="bcs-ext", path = "../commons/bcs_ext" }
+starcoin-vm-types = {path = "../vm/types"}
