--- a/etc/starcoin_types.yml
+++ b/etc/starcoin_types.yml
@@ -199,6 +199,17 @@ SignedUserTransaction:
 SigningMessage:
   NEWTYPESTRUCT:
     SEQ: U8
+StateKey:
+  ENUM:
+    0:
+      AccessPath:
+        NEWTYPE:
+          TYPENAME: AccessPath
+    1:
+      TableItem:
+        STRUCT:
+          - handle: U128
+          - key: BYTES
 StructTag:
   STRUCT:
     - address:
@@ -311,16 +322,6 @@ WithdrawCapabilityResource:
   STRUCT:
     - account_address:
         TYPENAME: AccountAddress
-WriteAccessPathSet:
-  NEWTYPESTRUCT:
-    TYPENAME: WriteAccessPathSetMut
-WriteAccessPathSetMut:
-  STRUCT:
-    - write_set:
-        SEQ:
-          TUPLE:
-            - TYPENAME: AccessPath
-            - TYPENAME: WriteOp
 WriteOp:
   ENUM:
     0:
@@ -328,3 +329,13 @@ WriteOp:
     1:
       Value:
         NEWTYPE: BYTES
+WriteSet:
+  NEWTYPESTRUCT:
+    TYPENAME: WriteSetMut
+WriteSetMut:
+  STRUCT:
+    - write_set:
+        SEQ:
+          TUPLE:
+            - TYPENAME: StateKey
+            - TYPENAME: WriteOp
